--- a/src/pages/stories/[...slug].astro
+++ b/src/pages/stories/[...slug].astro
@@ -21,15 +21,15 @@ const { Content } = await entry.render();
 
 ---
 <Main>
-  <div class="md:col-span-8 md:col-start-3 col-span-10 col-start-2">
+  <div class="md:col-span-8 md:col-start-3 col-span-10 col-start-2 pb-10">
     <h1 class="title text-4xl text-center font-sans font-bold my-4">{entry.data.title} </h1>
     <h2 class="chapter-title text-2xl text-center my-3 text-zinc-300">
       {entry.data.chapter === 0 ? 'Prologue': `Chapter ${entry.data.chapter}`}
     </h2>
     <Content />
   </div>
-  <div class="hidden md:block md:col-span-2 sticky top-12 ">
-    <ol class="mt-9 ml-4">
+  <div class="hidden md:block md:col-span-2">
+    <ol class="mt-9 ml-4 sticky top-20">
       {storiesCollection.map(chapter => (
         <li class={chapter.slug === entry.slug ? 'font-bold' : undefined}>
           <a href={`/stories/${chapter.slug}`}>{chapter.data.chapter === 0 ? 'Prologue': `Chapter ${chapter.data.chapter}`}</a>
