--- a/src/pages/stories/index.astro
+++ b/src/pages/stories/index.astro
@@ -20,7 +20,7 @@ const groupedStories = stories.reduce((acc, story) => {
     title: story.data.title,
     chapters: 0,
     tags: new Set(),
-    slug: story.slug,
+    slug: story.id,
   }
 
   acc[story.data.title].chapters +=1;
