--- a/src/pages/stories/[...slug].astro
+++ b/src/pages/stories/[...slug].astro
@@ -1,11 +1,11 @@
 ---
-import { getCollection } from "astro:content";
+import { getCollection, render } from "astro:content";
 import Main from "../../layouts/main.astro";
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection("stories", (e) => import.meta.env.NODE_ENV !== 'production' || !e.data.draft);
   return blogEntries.map((entry) => ({
-    params: { slug: entry.slug },
+    params: { slug: entry.id },
     props: { entry },
   }));
 }
@@ -17,7 +17,7 @@ const storiesCollection = await getCollection('stories', (e) => {
 storiesCollection.sort((a, b) => a.data.chapter - b.data.chapter)
 
 const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { Content } = await render(entry);
 
 ---
 <Main>
@@ -31,8 +31,8 @@ const { Content } = await entry.render();
   <div class="hidden md:block md:col-span-2">
     <ol class="mt-9 ml-4 sticky top-20">
       {storiesCollection.map(chapter => (
-        <li class={chapter.slug === entry.slug ? 'font-bold' : undefined}>
-          <a href={`/stories/${chapter.slug}`}>{chapter.data.chapter === 0 ? 'Prologue': `Chapter ${chapter.data.chapter}`}</a>
+        <li class={chapter.id === entry.slug ? 'font-bold' : undefined}>
+          <a href={`/stories/${chapter.id}`}>{chapter.data.chapter === 0 ? 'Prologue': `Chapter ${chapter.data.chapter}`}</a>
         </li>
       ))}
     </ol>
