--- a/src/pages/stories/[...slug].astro
+++ b/src/pages/stories/[...slug].astro
@@ -31,7 +31,7 @@ const { Content } = await render(entry);
   <div class="hidden md:block md:col-span-2">
     <ol class="mt-9 ml-4 sticky top-20">
       {storiesCollection.map(chapter => (
-        <li class={chapter.id === entry.slug ? 'font-bold' : undefined}>
+        <li class={chapter.id === entry.id? 'font-bold' : undefined}>
           <a href={`/stories/${chapter.id}`}>{chapter.data.chapter === 0 ? 'Prologue': `Chapter ${chapter.data.chapter}`}</a>
         </li>
       ))}
