--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -7,7 +7,12 @@ const { title = '' } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/raven-only.svg" />
+    <link href="/raven-only.svg" rel="icon" type="image/svg+xml" media="(prefers-color-scheme: light)">
+
+    <link href="/raven-only-color.svg" rel="icon" type="image/svg+xml" media="(prefers-color-scheme: dark)">
+
+    
     <link rel="stylesheet" href="/main.css" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
