--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from "../components/navbar/navbar.astro";
 import Footer from "../components/footer/footer.astro";
+import '../app.css';
 const { title = '' } = Astro.props;
 ---
 
@@ -13,7 +14,6 @@ const { title = '' } = Astro.props;
     <link href="/raven-only-color.svg" rel="icon" type="image/svg+xml" media="(prefers-color-scheme: dark)">
 
     
-    <link rel="stylesheet" href="/main.css" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Burbridge {title ? `- ${title}` : ''}</title>
