feat: Add other section for writings that are poems or other non-story, non-blog posts

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -13,15 +13,21 @@ const { class: className } = Astro.props;
     <div class="flex items-center justify-center">
       <a href="/stories">Stories</a>
     </div>
+    <div class="flex items-center justify-center">
+      <a href="/other">Other writings</a>
+    </div>
   </div>
   
 </nav>
 
 <style>
+  a,a:link {
+    color: white;
+  }
   a:hover {
     text-decoration: underline;
   }
   a.active {
-    font-weight: 600;
+    font-weight: var(--font-weight-semibold);
   }
 </style>
