--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 
 @theme {
   --color-text-token: light-dark(var(--color-zinc-900), var(--color-zinc-100));
-  --color-background-token: light-dark(var(--color-slate-100), var(--color-slate-900));
+  --color-background-token: light-dark(var(--color-slate-100), var(--color-zinc-900));
 }
 
 :root[data-theme="light"] {
@@ -20,12 +20,21 @@
 html,body {
   background-color: var(--color-background-token);
   color: var(--color-text-token);
+  font-family: var(--font-sans);
 }
 
 @layer base {
   h1, h2, h3, h4, h5, h6 {
     line-height: 1.25em;
     margin-block-end: 0.25em;
+    > small {
+      margin-inline-start: --spacing(4);
+      color: 
+        light-dark(
+          hsl(from currentColor h s calc(l + 30)),
+          hsl(from currentColor h s calc(l - 20))
+        );
+    }
   }
 
   h1 {
@@ -36,5 +45,25 @@ html,body {
   h2 {
     font-size: var(--text-xl);
     font-weight: var(--font-weight-extrabold);
+  }
+
+  h3 {
+    font-size: var(--text-lg);
+    font-weight: var(--font-weight-bold);
+  }
+
+  h4 {
+    font-size: var(--text-md);
+    font-weight: var(--font-weight-semibold);
+    text-decoration: underline;
+  }
+
+  .lead {
+    font-size: 1.25em;
+  }
+
+  a:link,
+  a {
+    color: light-dark(var(--color-sky-700), var(--color-sky-400));
   }
 }
