--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -33,6 +33,14 @@ const { title = '' } = Astro.props;
     grid-template-columns: repeat(12, 1fr);  
     grid-template-rows: 70px 1fr minmax(100px, max-content);
     min-height: 100dvh;
+    container-name: main;
+    container-type: inline-size;
+  }
+
+  @media screen and (max-width: var(--breakpoint-sm)) {
+    .layout {
+      background-color: orange;
+    }
   }
   
 </style>
