--- a/src/pages/other/[...slug].astro
+++ b/src/pages/other/[...slug].astro
@@ -20,7 +20,7 @@ const others = await getCollection('other', story => !story.data.draft && story.
 ---
 
 <Main>
-  <div class="wrapper @lg/main:col-span-8 @lg/main:col-start-3 mt-8 grid grid-cols-subgrid">
+  <div class="wrapper col-span-6 @lg/main:col-span-8 @lg/main:col-start-3 mt-8 grid grid-cols-subgrid">
     <div class="@lg/main:col-span-6 p-4">
       {
         entry.data.title && 
