--- a/src/pages/other/[...slug].astro
+++ b/src/pages/other/[...slug].astro
@@ -20,8 +20,8 @@ const others = await getCollection('other', story => !story.data.draft && story.
 ---
 
 <Main>
-  <div class="wrapper col-span-6 @lg/main:col-span-8 @lg/main:col-start-3 mt-8 grid grid-cols-subgrid">
-    <div class="@lg/main:col-span-6 p-4">
+  <div class="wrapper col-span-12 @lg/main:col-span-8 @lg/main:col-start-3 mt-8 grid grid-cols-subgrid">
+    <div class="@lg/main:col-span-6 col-span-12 p-4">
       {
         entry.data.title && 
         <h2 class="mb-4">{entry.data.title} <small> by {entry.data.author}</small></h2>
