--- a/src/pages/stories/index.astro
+++ b/src/pages/stories/index.astro
@@ -34,7 +34,7 @@ const groupedStories = stories.reduce((acc, story) => {
 ---
 
 <MainLayout>
-  <section class="col-span-8 col-start-3 p-4" id="main-info">
+  <section class="col-span-12 @lg/main:col-span-8 @lg/main:col-start-3 p-4" id="main-info">
     <h1 class="title text-4xl text-center font-black mb-3 mt-4">Stories</h1>
     <p>
       The stories that I&apos;ve written over the years are generally a mix of random things
