--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,6 +1,6 @@
 ---
-import Navbar from "../components/navbar/navbar.astro";
-import Footer from "../components/footer/footer.astro";
+import Navbar from '../components/navbar/navbar.astro';
+import Footer from '../components/footer/footer.astro';
 import '../app.css';
 const { title = '' } = Astro.props;
 ---
