--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from "../layouts/main.astro";
+import MainLayout from '../layouts/main.astro';
 ---
 <MainLayout>
   <section class="@lg/main:col-span-8 @lg/main:col-start-3 p-4" id="main-info">
