--- a/src/pages/stories/[...slug].astro
+++ b/src/pages/stories/[...slug].astro
@@ -1,9 +1,12 @@
 ---
-import { getCollection, render } from "astro:content";
-import Main from "../../layouts/main.astro";
+import { getCollection, render } from 'astro:content';
+import Main from '../../layouts/main.astro';
 
 export async function getStaticPaths() {
-  const blogEntries = await getCollection("stories", (e) => import.meta.env.NODE_ENV !== 'production' || !e.data.draft);
+  const blogEntries = await getCollection(
+    'stories',
+    (e) => import.meta.env.NODE_ENV !== 'production' || !e.data.draft,
+  );
   return blogEntries.map((entry) => ({
     params: { slug: entry.id },
     props: { entry },
@@ -11,17 +14,16 @@ export async function getStaticPaths() {
 }
 
 const storiesCollection = await getCollection('stories', (e) => {
-  return import.meta.env.NODE_ENV !== 'production' || !e.data.draft
+  return import.meta.env.NODE_ENV !== 'production' || !e.data.draft;
 });
 
 // Sort the items by chapter
-storiesCollection.sort((a, b) => a.data.chapter - b.data.chapter)
+storiesCollection.sort((a, b) => a.data.chapter - b.data.chapter);
 
 const { entry } = Astro.props;
 const { Content } = await render(entry);
 
-const readingTime = Math.ceil(entry.body.split(/\s+/).length /250);
-
+const readingTime = Math.ceil(entry.body.split(/\s+/).length / 250);
 ---
 <Main>
   <div class="lg:col-span-6 md:col-span-8 md:col-start-3 lg:col-start-4 col-span-12 px-6 md:px-0 pb-10">
