--- a/src/pages/stories/[...slug].astro
+++ b/src/pages/stories/[...slug].astro
@@ -24,12 +24,21 @@ const { entry } = Astro.props;
 const { Content } = await render(entry);
 
 const readingTime = Math.ceil(entry.body.split(/\s+/).length / 250);
+
+function renderChapterName(entry: (typeof Astro.props)['entry']): string {
+  return entry.data.chapter !== 0
+    ? `Chapter ${entry.data.chapter}${
+        entry.data.chapterTitle ? `: ${entry.data.chapterTitle}` : ''
+      }`
+    : 'Prologue';
+}
 ---
 <Main>
-  <div class="lg:col-span-6 md:col-span-8 md:col-start-3 lg:col-start-4 col-span-12 px-6 md:px-0 pb-10">
+  <div class="lg:col-span-6 md:col-span-8 md:col-start-3 lg:col-start-4 col-span-12 px-6 md:px-0 pb-10 prose">
     <h1 class="title text-4xl text-center font-sans font-bold my-4">{entry.data.title} </h1>
-    <h2 class="chapter-title text-2xl text-center my-3 text-zinc-300">
+    <h2 class="chapter-title text-2xl text-center my-3 text-zinc-300 text-balance">
       {entry.data.chapter === 0 ? 'Prologue': `Chapter ${entry.data.chapter}`}
+      {entry.data.chapterTitle ? `: ${entry.data.chapterTitle}` : ''}
     </h2>
     <h3 class="text-center mb-6">
       <small>
@@ -42,7 +51,7 @@ const readingTime = Math.ceil(entry.body.split(/\s+/).length / 250);
     <ol class="mt-9 ml-4 sticky top-20">
       {storiesCollection.map(chapter => (
         <li class={chapter.id === entry.id? 'font-bold' : undefined}>
-          <a href={`/stories/${chapter.id}`}>{chapter.data.chapter === 0 ? 'Prologue': `Chapter ${chapter.data.chapter}`}</a>
+          <a href={`/stories/${chapter.id}`}>{renderChapterName(chapter)}</a>
         </li>
       ))}
     </ol>
@@ -58,5 +67,12 @@ const readingTime = Math.ceil(entry.body.split(/\s+/).length / 250);
     margin-top: theme('spacing.2');
     line-height: theme('spacing.6');
   }
-  
+  blockquote {
+    margin-left: calc(var(--spacing) * 6);
+    font-style: italic;
+    margin-bottom: calc(var(--spacing) * 6);
+    & em,i {
+      font-style: normal;
+    }
+  }
 </style>
