--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -6,7 +6,7 @@ const { class: className } = Astro.props;
   <div class="flex items-center">
     <img src="/logo-full.svg" alt="Burbridge Logo" class="w-auto ml-10 mr-4 h-[2rem]" />
   </div>
-  <div class="grid grid-cols-subgrid col-span-3 col-end-13 gap-x-2">
+  <div class="grid grid-cols-subgrid col-span-4 col-end-13 gap-x-2">
     <div class="flex items-center justify-center">
       <a href="/">Home</a>
     </div>
@@ -15,6 +15,9 @@ const { class: className } = Astro.props;
     </div>
     <div class="flex items-center justify-center">
       <a href="/other">Other writings</a>
+    </div>
+    <div class="flex items-center justify-center">
+      <a href="/blogs">Blogs</a>
     </div>
   </div>
   
