--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -28,6 +28,7 @@ const { title = '' } = Astro.props;
       </div>
       <Footer class="bg-black col-start-1 col-span-12 -row-end-1"/>
     </div>
+
     <Cookie />
   </body>
 </html>
@@ -40,6 +41,7 @@ const { title = '' } = Astro.props;
     min-height: 100dvh;
     container-name: main;
     container-type: inline-size;
+    /* gap: 0.5em; */
   }
 
   .layout .content {
