--- a/src/pages/other/index.astro
+++ b/src/pages/other/index.astro
@@ -1,22 +1,13 @@
 ---
-import { getCollection } from 'astro:content';
 import Main from '../../layouts/main.astro';
+import { listOthers } from '$lib/other';
+import { getAllTagsForType } from '$lib/tags';
 
-const stories = await getCollection('other', (f) => {
-  return import.meta.env.NODE_ENV !== 'production' || !f.data.draft;
+const others = await listOthers();
+const othersByTag = await getAllTagsForType('others').then((r) => {
+  return r.filter((t) => t.others && t.others.length > 0);
 });
-
-const storyMaps = stories.reduce((all, cur) => {
-  for (const tag of cur.data.tags) {
-    let mapped = all.get(tag);
-    if (mapped === undefined) {
-      mapped = [];
-      all.set(tag, mapped);
-    }
-    mapped.push(cur);
-  }
-  return all;
-}, new Map<string, typeof stories>());
+console.info(others);
 ---
 <Main title="Other Pieces">
   <div class="p-4 col-span-12 @lg/main:col-span-6 @lg/main:col-start-3 space-y-4">
@@ -26,23 +17,24 @@ const storyMaps = stories.reduce((all, cur) => {
       where those pieces will live.
     </p>
     {
-      stories.length === 0 && (
+      others.data.length === 0 && (
         <div>No other pieces exist at this moment in time</div>
       )
     }
     {
-      stories.length > 0 && (
+      others.data.length > 0 && (
         <div class="space-y-5">
-          {stories.map((story) => (
+          {others.data.map((story) => (
             <h3 class="bg-slate-800 p-4 rounded-md">
-              <a href={`/other/${story.id}`}>
-                {story.data.title}
+              <a href={`/other/${story.slug}`}>
+                {story.title}
               </a>
             </h3>
           ))}
         </div>
       )
     }
+
   </div>
   <aside class="p-4 @lg/main:col-span-2 @lg/main:pl-8">
     <h3 class="mt-8 mb-4">
@@ -51,14 +43,13 @@ const storyMaps = stories.reduce((all, cur) => {
 
     <div class="flex justify-start flex-wrap gap-2">
       {
-        Array.from(storyMaps.keys())
-          .map(k => (
-            <div class="pill px-2 py-1 border rounded capitalize">
-              <a href={`?tag=${k}`}>
-                {k}
-              </a>
+        othersByTag.length > 0 
+          ? othersByTag.map(tag => (
+            <div class="pill bg-sky-700 px-3 py-1 rounded-full">
+              {tag.display}
             </div>
           ))
+          : (<p>No Tags yet</p>)
       }
     </div>
   </aside>
