--- a/src/pages/stories/[...slug].astro
+++ b/src/pages/stories/[...slug].astro
@@ -1,50 +1,66 @@
 ---
-import { getCollection, render } from 'astro:content';
 import Main from '../../layouts/main.astro';
+import { listStories } from '../../lib/stories';
+import { getChapterFromFullSlug } from '../../lib/chapters';
+import Contents from '../../components/contents/contents.astro';
 
 export async function getStaticPaths() {
-  const blogEntries = await getCollection(
-    'stories',
-    (e) => import.meta.env.NODE_ENV !== 'production' || !e.data.draft,
+  let page;
+  const stories = [];
+  do {
+    page = await listStories((page?.meta?.page ?? 0) + 1);
+    stories.push(...page.data);
+  } while (page.meta.page < page.meta.pageCount);
+
+  const mappedStories = await Promise.all(
+    stories.flatMap((story) =>
+      story.chapters.flatMap(async (chapter) => {
+        const slug = `${story.slug}/${chapter.slug}`;
+        const contents = await getChapterFromFullSlug(slug);
+        return {
+          params: { slug },
+          props: {
+            story,
+            contents: contents.contents,
+            chapterTitle: chapter.chapter_title,
+            chapterNumber: chapter.chapter_number,
+          },
+        };
+      }),
+    ),
   );
-  return blogEntries.map((entry) => ({
-    params: { slug: entry.id },
-    props: { entry },
-  }));
+
+  return mappedStories;
 }
 
-const storiesCollection = await getCollection('stories', (e) => {
-  return import.meta.env.NODE_ENV !== 'production' || !e.data.draft;
-});
-
-// Sort the items by chapter
-storiesCollection.sort((a, b) => a.data.chapter - b.data.chapter);
-
-const { entry } = Astro.props;
-const { Content } = await render(entry);
-
-const readingTime = Math.ceil(entry.body.split(/\s+/).length / 250);
+const { story, contents, chapterTitle, chapterNumber } = Astro.props;
+const { slug } = Astro.params;
 ---
 <Main>
   <div class="lg:col-span-6 md:col-span-8 md:col-start-3 lg:col-start-4 col-span-12 px-6 md:px-0 pb-10">
-    <h1 class="title text-4xl text-center font-sans font-bold my-4">{entry.data.title} </h1>
+    <h1 class="title text-4xl text-center font-sans font-bold my-4">{story.title} </h1>
     <h2 class="chapter-title text-2xl text-center my-3 text-zinc-300">
-      {entry.data.chapter === 0 ? 'Prologue': `Chapter ${entry.data.chapter}`}
+      {
+        chapterTitle ?
+          chapterTitle
+          : `Chapter ${chapterNumber}`
+
+      }
     </h2>
-    <h3 class="text-center mb-6">
-      <small>
-        Approx. {readingTime} minutes
-      </small>
-    </h3>
-    <Content />
+
+    <Contents {contents}/>
   </div>
   <div class="hidden md:block md:col-span-2">
     <ol class="mt-9 ml-4 sticky top-20">
-      {storiesCollection.map(chapter => (
-        <li class={chapter.id === entry.id? 'font-bold' : undefined}>
-          <a href={`/stories/${chapter.id}`}>{chapter.data.chapter === 0 ? 'Prologue': `Chapter ${chapter.data.chapter}`}</a>
-        </li>
-      ))}
+      {
+        story.chapters.map(chapter => (
+          <li class={slug.endsWith(chapter.slug) ? 'font-bold' : undefined}>
+            <a href={`/stories/${story.slug}/${chapter.slug}`}>
+              {chapter.chapter_title}
+            </a>
+          </li>
+        ))
+      }
     </ol>
   </div>
 </Main>
@@ -58,5 +74,5 @@ const readingTime = Math.ceil(entry.body.split(/\s+/).length / 250);
     margin-top: theme('spacing.2');
     line-height: theme('spacing.6');
   }
-  
+
 </style>
