feat: Adds in Strapi connection (#29) (#31)

--- a/src/pages/stories/[...slug].astro
+++ b/src/pages/stories/[...slug].astro
@@ -17,6 +17,7 @@ export async function getStaticPaths() {
       story.chapters.flatMap(async (chapter) => {
         const slug = `${story.slug}/${chapter.slug}`;
         const contents = await getChapterFromFullSlug(slug);
+        console.info('CONTENTS', contents);
         return {
           params: { slug },
           props: {
