--- a/web/src/pages/stories/[...slug].astro
+++ b/web/src/pages/stories/[...slug].astro
@@ -1,4 +1,5 @@
 ---
+import { calculateReadingTime } from '$lib/util';
 import Contents from '../../components/contents/contents.astro';
 import Main from '../../layouts/main.astro';
 import { getChapterFromFullSlug } from '../../lib/chapters';
@@ -47,6 +48,9 @@ const { slug } = Astro.params;
 
       }
     </h2>
+    <h3 class="my-3 text-center">
+      approx {calculateReadingTime(contents)} min(s)
+    </h3>
 
     <Contents {contents}/>
   </div>
