--- a/web/src/pages/blogs/[slug].astro
+++ b/web/src/pages/blogs/[slug].astro
@@ -1,19 +1,20 @@
 ---
-import Contents from '$components/contents/contents.astro';
 import Main from '$layouts/main.astro';
-import { listBlogs } from '$lib/blogs';
-import { paginateFunction, strapiUrl } from '$lib/pagination';
+import { getPayloadInstance} from '$lib/util.ts';
+import { RichText } from '@payload-bites/astro-richtext-renderer';
 
 export async function getStaticPaths() {
-  const blogs = await paginateFunction(listBlogs);
-  return blogs.map((blog) => ({
+  const payload = await getPayloadInstance();
+  // const payload = await getPayload({ config });
+  const blogs = await payload.find({ collection: 'blogs', draft: import.meta.env.DEV, limit: 0 });
+  return blogs.docs.map(blog => ({
     params: {
       slug: blog.slug,
     },
     props: {
-      blog,
-    },
-  }));
+      blog
+    }
+  }))
 }
 
 const { blog } = Astro.props;
@@ -21,23 +22,14 @@ const { blog } = Astro.props;
 <Main title={blog.title}>
 
   <div class="blog-grid col-span-12">
-    {blog.header && (
-      <header>
-        <img src={`${strapiUrl}${blog.header.formats.medium.url}`} class="object-cover w-full" alt="">
-
-      </header>
-    )}
-
-    
     
     <div class="text">
       <h1>{blog.title}</h1>
-      <h2>{blog.publishedAt || blog.updatedAt}</h2>
+
+      <RichText data={blog.contents} />
       
-      <Contents contents={blog.contents} />
     </div>
   </div>
-  
   
 </Main>
 
