--- a/web/src/pages/stories/[...slug].astro
+++ b/web/src/pages/stories/[...slug].astro
@@ -1,35 +1,44 @@
 ---
-import { calculateReadingTime } from '$lib/util';
-import Contents from '../../components/contents/contents.astro';
-import Main from '../../layouts/main.astro';
-import { getChapterFromFullSlug } from '../../lib/chapters';
-import { listStories } from '../../lib/stories';
+import { getPayloadInstance } from "$lib/util";
+import { RichText } from "@payload-bites/astro-richtext-renderer";
+import Main from "../../layouts/main.astro";
 
 export async function getStaticPaths() {
-  let page: Awaited<ReturnType<typeof listStories>>;
-  const stories: Awaited<ReturnType<typeof listStories>> = [];
-  do {
-    page = await listStories((page?.meta?.page ?? 0) + 1);
-    stories.push(...page.data);
-  } while (page.meta.page < page.meta.pageCount);
+  const payload = await getPayloadInstance();
+  const stories = await payload.find({
+    collection: "stories",
+    limit: 0,
+    draft: import.meta.env.DEV,
+    populate: {
+      chapters: {
+        chapterNumber: true,
+        slug: true,
+        title: true,
+        contents: true,
+      },
+    },
+    sort: [
+      'chapters.chapterNumber'
+    ],
+    pagination: false,
+  });
 
-  const mappedStories = await Promise.all(
-    stories.flatMap((story) =>
-      story.chapters.flatMap(async (chapter) => {
-        const slug = `${story.slug}/${chapter.slug}`;
-        const contents = await getChapterFromFullSlug(slug);
-        return {
-          params: { slug },
-          props: {
-            story,
-            contents: contents.contents,
-            chapterTitle: chapter.chapter_title,
-            chapterNumber: chapter.chapter_number,
-          },
-        };
-      }),
-    ),
+  console.info('RAW', stories.docs.map(doc => doc.chapters));
+
+  const mappedStories = stories.docs.flatMap((story) =>
+    story.chapters.map((chapter) => ({
+      params: {
+        slug: `${story.slug}/${chapter.slug}`,
+      },
+      props: {
+        story: story,
+        contents: chapter.contents,
+        chapterTitle: chapter.title,
+        chapterNumber: chapter.chapterNumber,
+      },
+    })),
   );
+
 
   return mappedStories;
 }
@@ -37,30 +46,27 @@ export async function getStaticPaths() {
 const { story, contents, chapterTitle, chapterNumber } = Astro.props;
 const { slug } = Astro.params;
 ---
+
 <Main>
-  <div class="lg:col-span-6 md:col-span-8 md:col-start-3 lg:col-start-4 col-span-12 px-6 md:px-0 pb-10">
-    <h1 class="title text-4xl text-center font-sans font-bold my-4">{story.title} </h1>
+  <div
+    class="lg:col-span-6 md:col-span-8 md:col-start-3 lg:col-start-4 col-span-12 px-6 md:px-0 pb-10"
+  >
+    <h1 class="title text-4xl text-center font-sans font-bold my-4">
+      {story.title}
+    </h1>
     <h2 class="chapter-title text-2xl text-center my-3 text-zinc-300">
-      {
-        chapterTitle ?
-          chapterTitle
-          : `Chapter ${chapterNumber}`
-
-      }
+      {chapterTitle ? chapterTitle : `Chapter ${chapterNumber}`}
     </h2>
-    <h3 class="my-3 text-center">
-      approx {calculateReadingTime(contents)} min(s)
-    </h3>
 
-    <Contents {contents}/>
+    <RichText data={contents} />
   </div>
   <div class="hidden md:block md:col-span-2">
     <ol class="mt-9 ml-4 sticky top-20">
       {
-        story.chapters.map(chapter => (
-          <li class={slug.endsWith(chapter.slug) ? 'font-bold' : undefined}>
+        story.chapters.map((chapter) => (
+          <li class={slug.endsWith(chapter.slug) ? "font-bold" : undefined}>
             <a href={`/stories/${story.slug}/${chapter.slug}`}>
-              {chapter.chapter_title}
+              {chapter.title}
             </a>
           </li>
         ))
@@ -70,22 +76,26 @@ const { slug } = Astro.params;
 </Main>
 
 <style is:global>
+  @reference '#app.css';
   p {
-    line-height: theme('spacing.4');
+    line-height: theme("spacing.4");
   }
   p + p {
-    text-indent: theme('spacing.6');
-    margin-top: theme('spacing.4');
-    line-height: theme('spacing.6');
+    text-indent: theme("spacing.6");
+    margin-top: theme("spacing.4");
+    line-height: theme("spacing.6");
   }
 
   blockquote {
     @apply italic;
     padding-inline: 0.75rem;
+    margin-block: --spacing(6);
+    p + p {
+      margin-block-start: --spacing(4);
+    }
   }
 
   hr {
     color: color-mix(in srgb, transparent 50%, currentColor);
   }
-
 </style>
